# VirtualDrum

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/src/headers/: drum.h  event_handler.h  gui.h  image_loader.h
lib/src/sources/: event_handler.cpp  image_loader.cpp
